<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPhone"
        style="@style/edtFieldStyle"
        android:hint="@string/phone_number"
        app:endIconDrawable="@drawable/phone_numbers_call"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/purple_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/edtFieldStyle"
        android:id="@+id/edtEmail"
        android:hint="@string/email_address"
        app:endIconDrawable="@drawable/mail"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtE_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/teal_200" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/welcome"
        android:textColor="#cf3a82"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSexHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/sex"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="143dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtSexHolder" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:padding="16dp"
        android:text="@string/register"
        app:backgroundTint="@color/teal_200"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidNo"
        android:textColor="#D52323"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/edtPhone"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <ImageView
        android:id="@+id/designContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/edgeDesign"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_drawing2" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/edtFieldStyle"
        android:id="@+id/edtFullName"
        android:hint="@string/full_name"
        app:endIconDrawable="@drawable/user"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        style="@style/guidelineProp"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="382dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        style="@style/guidelineProp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3474692" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        style="@style/guidelineProp"
        app:layout_constraintGuide_begin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>